# Windmill_7_6_2026

./: Cargo.toml
src/: creando_windmill.rs  main.rs  p1.rs  p2.rs  rect_rojo.rs  sdl2_context.rs
